--- a/app/views/beacons/edit.html.erb
+++ b/app/views/beacons/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Beacon</h1>
+<div class="col-md-8">
+	<h1>Editing Beacon</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @beacon %> |
-<%= link_to 'Back', beacons_path %>
+	<%= link_to 'Show', @beacon ,class:'btn btn-default'%> |
+	<%= link_to 'Back', beacons_path,class:'btn btn-warning' %>
+</div>
