--- a/app/views/beacons/new.html.erb
+++ b/app/views/beacons/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Beacon</h1>
+<div class="col-md-8">
+	<h1>New Beacon</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', beacons_path %>
+	<%= link_to 'Back', beacons_path , class:'btn btn-warning'%>
+</div>
