--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,3 @@
 <div class="col-md-10 col-sm-10">
-	<h1>Welcome#index</h1>
-	<p>Página de inicio</p>
-	<p>Controlador Welcome, action index</p>
+	<h1>Welcome to your iBeacon Administrator</h1>
 </div>
