--- a/app/views/minor_regions/edit.html.erb
+++ b/app/views/minor_regions/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Minor Region</h1>
+<div class="col-md-8 col-sm-8">
+	<h1>Editing Minor Region</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @minor_region %> |
-<%= link_to 'Back', minor_regions_path %>
+	<%= link_to 'Show', @minor_region , class:'btn btn-default'%> |
+	<%= link_to 'Back', minor_regions_path ,class:'btn btn-warning'%>
+</div>
