--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -1,25 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8 col-sm-8">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Beacons</h1>
+  <h1>Listing Beacons</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @beacons.each do |beacon| %>
+  <table class ="table table-stripped">
+    <thead>
       <tr>
-        <td><%= link_to 'Show', beacon %></td>
-        <td><%= link_to 'Edit', edit_beacon_path(beacon) %></td>
-        <td><%= link_to 'Destroy', beacon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>ID</td>
+        <td>Major Region</td>
+        <td>Minor Region</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @beacons.each do |beacon| %>
+        <tr>
+          <td><%= beacon.id%></td>
+          <td><%= beacon.major_id %></td>
+          <td><%= beacon.minor_id %></td>
+          <td><%= link_to 'Show', beacon ,class:'btn btn-default'%></td>
+          <td><%= link_to 'Edit', edit_beacon_path(beacon), class:'btn btn-primary'%></td>
+          <td><%= link_to 'Destroy', beacon, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-danger' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Beacon', new_beacon_path %>
+  <br>
+</div>
