--- a/app/views/major_regions/_form.html.erb
+++ b/app/views/major_regions/_form.html.erb
@@ -11,7 +11,18 @@
     </div>
   <% end %>
 
+  <div>
+    <%= f.label :major_id %>
+    <%= f.text_field :major_id, autofocus: true, class:'form-control input-medium' %>
+
+    <br></br>
+
+    <%= f.label :Description %>
+    <%= f.text_area :description, autofocus: true, class:'form-control input-medium', rows:3 %>
+  </div>
+  <br></br>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit", class:'btn btn-primary'%>
   </div>
 <% end %>
