--- a/app/views/minor_regions/index.html.erb
+++ b/app/views/minor_regions/index.html.erb
@@ -1,25 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8 col-sm-8">
+  <p id="notice"><%= notice %></p>
 
-<h1>Listing Minor Regions</h1>
+  <h1>Listing Minor Regions</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @minor_regions.each do |minor_region| %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= link_to 'Show', minor_region %></td>
-        <td><%= link_to 'Edit', edit_minor_region_path(minor_region) %></td>
-        <td><%= link_to 'Destroy', minor_region, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+      <tr>
+        <td>Minor_id</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    <tbody>
+      <% @minor_regions.each do |minor_region| %>
+        <tr>
+          <td><%= minor_region.minor_id%></td>
+          <td><%= link_to 'Show', minor_region ,class:'btn btn-default'%></td>
+          <td><%= link_to 'Edit', edit_minor_region_path(minor_region), class:'btn btn-primary'%></td>
+          <td><%= link_to 'Destroy', minor_region, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-danger' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<br>
+  <br>
 
-<%= link_to 'New Minor region', new_minor_region_path %>
+  <%= link_to 'New Minor region', new_minor_region_path, class: 'btn btn-primary' %>
+</div>
