--- a/app/views/minor_regions/new.html.erb
+++ b/app/views/minor_regions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Minor Region</h1>
+<div class="col-md-8">
+	<h1>New Minor Region</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', minor_regions_path %>
+	<%= link_to 'Back', minor_regions_path , class:'btn btn-warning'%>
+</div>
