--- a/app/views/minor_regions/show.html.erb
+++ b/app/views/minor_regions/show.html.erb
@@ -1,4 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_minor_region_path(@minor_region) %> |
-<%= link_to 'Back', minor_regions_path %>
+<div class="col-md-8 col-sm-8">
+	<h2>Showing Minor region <%= @minor_region.minor_id %></h2>
+	<p id="notice"><%= notice %></p>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3>Description</h3>
+		</div>
+		<div class="panel-body">
+			<p><%= @minor_region.description %></p>
+		</div>
+	</div>
+	<%= link_to 'Edit', edit_minor_region_path(@minor_region) ,class:'btn btn-primary'%> |
+	<%= link_to 'Back', minor_regions_path , class:'btn btn-warning'%>
+</div>
