Updates in models and db schema -- Updates in views

--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -3,7 +3,7 @@
 
   <h1>Listing Beacons</h1>
 
-  <table class ="table table-stripped">
+  <table id="datatable" class="table datatable table-condensed">
     <thead>
       <tr>
         <td>ID</td>
