--- a/app/views/layouts/_lateral.html.erb
+++ b/app/views/layouts/_lateral.html.erb
@@ -4,5 +4,6 @@
 		<%= link_to "Add new Beacon", new_beacon_path,class:'list-group-item' %>
 		<%= link_to "Major Regions", major_regions_path,class:'list-group-item' %>
 		<%= link_to "Minor Regions", minor_regions_path,class:'list-group-item'%>
+		<%= link_to "Reports", 'report/index',class:'list-group-item'%>
 	<% end %>
 </div>
