--- a/app/views/major_regions/index.html.erb
+++ b/app/views/major_regions/index.html.erb
@@ -3,18 +3,15 @@
 
   <h1>Listing Major Regions</h1>
 
-  <table class="table table-striped">
+  <table id="datatable" class="table datatable table-condensed">
     <thead>
-      <tr>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
       <tr>
         <td>Major_id</td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
+    </thead>
     <tbody>
       <% @major_regions.each do |major_region| %>
         <tr>
