--- a/app/views/minor_regions/index.html.erb
+++ b/app/views/minor_regions/index.html.erb
@@ -3,18 +3,15 @@
 
   <h1>Listing Minor Regions</h1>
 
-  <table class="table table-striped">
+  <table id="datatable" class="table table-striped">
     <thead>
-      <tr>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
       <tr>
         <td>Minor_id</td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
+    </thead>
     <tbody>
       <% @minor_regions.each do |minor_region| %>
         <tr>
