--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -21,8 +21,8 @@
 
     <br></br>
 
-    <%= f.label :description %>
-        <%= f.text_area :description, autofocus: true, class:'form-control input-medium', rows:3 %>
+    <%= f.label :Description %>
+    <%= f.text_area :description, autofocus: true, class:'form-control input-medium', rows:3 %>
 
     <%= f.submit "Submit", class:'btn btn-primary'%>
   </div>
