--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
-  *= require_self
- *= require dataTables/jquery.dataTables
- *= require_tree .
+ * 
+ *= require dataTables/jquery.dataTables 
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
