--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-default">
-	<div class="col-md-8 col-xs-8">
+	<div class="col-md-1 col-xs-1">
 		<%= link_to root_path do %>
-			<%= image_tag "Logo.png",title:"CouchInn",class:"img-responsive" %>
+			<%= image_tag "logo.svg",title:"iBeacon",class:"img-responsive" %>
 		<% end %>
+	</div>
+	<div class="col-md-7 col-sm-7">
+		<h3>iBeacon Manager</h3>
 	</div>
 	<div class="col-md-4 col-xs-4 text-center bottom-align-text">
 		<% if user_signed_in? %>
