--- a/app/views/beacons/edit.html.erb
+++ b/app/views/beacons/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="col-md-8">
-	<h1>Editing Beacon</h1>
+<div class="col-md-6 col-sm-6">
+	<h1>Editar Beacon</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @beacon ,class:'btn btn-default'%> |
-	<%= link_to 'Back', beacons_path,class:'btn btn-warning' %>
+	<%= link_to 'Ver', @beacon ,class:'btn btn-default'%> |
+	<%= link_to 'Atrás', beacons_path,class:'btn btn-warning' %>
 </div>
