--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,7 +4,7 @@
 	  
 	  <% if resource.errors.any? %>
 			<div class="alert alert-danger">
-			  <h6><No se encuentra ese email en la base de datos</h6>
+			  <h6>No se encuentra ese email en la base de datos</h6>
 			</div>
 		<% end %>
 	  
