--- a/app/views/major_regions/_form.html.erb
+++ b/app/views/major_regions/_form.html.erb
@@ -1,8 +1,6 @@
 <%= form_for(@major_region) do |f| %>
   <% if @major_region.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@major_region.errors.count, "error") %> prohibited this major_region from being saved:</h2>
-
+    <div class="alert alert-danger" id="error_explanation">
       <ul>
       <% @major_region.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -17,12 +15,12 @@
 
     <br></br>
 
-    <%= f.label :Description %>
+    <%= f.label :Descripcion %>
     <%= f.text_area :description, autofocus: true, class:'form-control input-medium', rows:3 %>
   </div>
   <br></br>
 
   <div class="actions">
-    <%= f.submit "Submit", class:'btn btn-primary'%>
+    <%= f.submit "Aceptar", class:'btn btn-primary'%>
   </div>
 <% end %>
