--- a/app/views/minor_regions/edit.html.erb
+++ b/app/views/minor_regions/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="col-md-8 col-sm-8">
+<div class="col-md-6 col-sm-6">
 	<h1>Editing Minor Region</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @minor_region , class:'btn btn-default'%> |
-	<%= link_to 'Back', minor_regions_path ,class:'btn btn-warning'%>
+	<%= link_to 'Ver', @minor_region , class:'btn btn-default'%> |
+	<%= link_to 'Atrás', minor_regions_path ,class:'btn btn-warning'%>
 </div>
