--- a/app/views/beacons/new.html.erb
+++ b/app/views/beacons/new.html.erb
@@ -1,7 +1,7 @@
-<div class="col-md-8">
-	<h1>New Beacon</h1>
+<div class="col-md-6 col-sm-6">
+	<h1>Nuevo Beacon</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', beacons_path , class:'btn btn-warning'%>
+	<%= link_to 'Atrás', beacons_path , class:'btn btn-warning'%>
 </div>
