--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <div class="col-md-10 col-sm-10">
-	<h1>Welcome to your iBeacon Administrator</h1>
+	<h1>Bienvenido a su Administrador de iBeacons</h1>
 </div>
