--- a/app/views/major_regions/edit.html.erb
+++ b/app/views/major_regions/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="col-md-8 col-sm-8">
-	<h1>Editing Major Region</h1>
+<div class="col-md-6 col-sm-6">
+	<h1>Editando Major Region</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Show', @major_region , class:'btn btn-default'%> |
-	<%= link_to 'Back', major_regions_path ,class:'btn btn-warning'%>
+	<%= link_to 'Ver', @major_region , class:'btn btn-default'%> |
+	<%= link_to 'Atrás', major_regions_path ,class:'btn btn-warning'%>
 </div>
