--- a/app/views/major_regions/new.html.erb
+++ b/app/views/major_regions/new.html.erb
@@ -1,7 +1,7 @@
-<div class="col-md-8">
+<div class="col-md-6">
 	<h1>New Major Region</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', major_regions_path , class:'btn btn-warning'%>
+	<%= link_to 'Atrás', major_regions_path , class:'btn btn-warning'%>
 </div>
