--- a/app/views/minor_regions/new.html.erb
+++ b/app/views/minor_regions/new.html.erb
@@ -1,7 +1,7 @@
-<div class="col-md-8">
-	<h1>New Minor Region</h1>
+<div class="col-md-6 col-sm-6">
+	<h1>Nueva Minor Region</h1>
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', minor_regions_path , class:'btn btn-warning'%>
+	<%= link_to 'Atrás', minor_regions_path , class:'btn btn-warning'%>
 </div>
