--- a/app/views/beacons/show.html.erb
+++ b/app/views/beacons/show.html.erb
@@ -1,8 +1,7 @@
 <div class="col-md-8 col-sm-8">
-	<p id="notice"><%= notice %></p>
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2>Beacon <%= @beacon.id%></h2>
+			<h2>Beacon "<%= @beacon.name%>"</h2>
 		</div>
 		<div class="panel-body">
 			<h4>Descripción</h4>
