--- a/app/views/beacons/showregion.html.erb
+++ b/app/views/beacons/showregion.html.erb
@@ -1,5 +1,4 @@
 <div class="col-md-8 col-sm-8">
-	<p id="notice"><%= notice %></p>
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h2>Beacon "<%= @beacon.name%>"</h2>
@@ -7,16 +6,20 @@
 		<div class="panel-body">
 			<h4>Descripción</h4>
 			<p><%= @beacon.description %></p>
+			<h4>Dueño: <%= User.find(@beacon.user_id).email %></h4>
 			<div class="col-md-6">
-				<h5>Descripción de  Major Region <%= @beacon.major_id %></h5>
-				<p><%= MajorRegion.find(@beacon.major_id).description %></p>
+				<h5>Major Region <%= @beacon.major_region_id %> descripción</h5>
+				<p><%= MajorRegion.find(@beacon.major_region_id).description %></p>
 			</div>
 			<div class="col-md-6">
-				<h5>Descripción de Minor Region <%= @beacon.minor_id %></h5>
-				<p><%= MinorRegion.find(@beacon.minor_id).description %></p>
+				<h5>Minor Region <%= @beacon.minor_region_id %> descripción</h5>
+				<p><%= MinorRegion.find(@beacon.minor_region_id).description %></p>
 			</div>
 		</div>
 	</div>
-	<%= link_to 'Editar', edit_beacon_path(@beacon) , class:'btn btn-primary'%> |
+	<% if current_user.id == @beacon.user_id %>
+		<%= link_to 'Eliminar', @beacon, method: :delete, data: { confirm: 'Está seguro?' },class:'btn btn-danger' %>
+		<%= link_to 'Editar', edit_beacon_path(@beacon) , class:'btn btn-primary'%>|
+	<% end %> 
 	<%= link_to 'Atrás', beacons_path , class:'btn btn-warning'%>
 </div>
