--- a/app/views/major_regions/show.html.erb
+++ b/app/views/major_regions/show.html.erb
@@ -1,14 +1,17 @@
 <div class="col-md-8 col-sm-8">
 	<h2>Major region <%= @major_region.major_id %></h2>
-	<p id="notice"><%= notice %></p>
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<h3>Descripción</h3>
 		</div>
 		<div class="panel-body">
 			<p><%= @major_region.description %></p>
+			<h4>Dueño: <%= User.find(@major_region.user_id).email %></h4>
 		</div>
 	</div>
-	<%= link_to 'Editar', edit_major_region_path(@major_region) ,class:'btn btn-primary'%> |
+	<% if current_user.id == @major_region.user_id %>
+		<%= link_to 'Eliminar', @major_region, method: :delete, data: { confirm: 'Está seguro?' },class:'btn btn-danger' %>
+		<%= link_to 'Editar', edit_major_region_path(@major_region) ,class:'btn btn-primary'%> |
+	<% end %>
 	<%= link_to 'Atrás', major_regions_path , class:'btn btn-warning'%>
 </div>
