--- a/app/views/minor_regions/index.html.erb
+++ b/app/views/minor_regions/index.html.erb
@@ -1,12 +1,12 @@
 <div class="col-md-8 col-sm-8">
-  <p id="notice"><%= notice %></p>
 
   <h1>Lista de Minor Regions</h1>
 
-  <table id="datatable" class="table table-striped">
+  <table id="datatable" class="table datatable table-condensed">
     <thead>
       <tr>
         <td>Minor_id</td>
+        <td>Dueño</td>
         <td></td>
         <td></td>
         <td></td>
@@ -16,9 +16,15 @@
       <% @minor_regions.each do |minor_region| %>
         <tr>
           <td><%= minor_region.minor_id%></td>
+          <td><%= User.find(minor_region.user_id).email %></td>
           <td><%= link_to 'Ver', minor_region ,class:'btn btn-default'%></td>
-          <td><%= link_to 'Editar', edit_minor_region_path(minor_region), class:'btn btn-primary'%></td>
-          <td><%= link_to 'Eliminar', minor_region, method: :delete, data: { confirm: 'Está seguro?' },class:'btn btn-danger' %></td>
+          <% if current_user.id == minor_region.user_id %>
+            <td><%= link_to 'Editar', edit_minor_region_path(minor_region), class:'btn btn-primary'%></td>
+            <td><%= link_to 'Eliminar', minor_region, method: :delete, data: { confirm: 'Está seguro?' },class:'btn btn-danger' %></td>
+          <% else %>
+            <td></td>
+            <td></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
