Final version with comments

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,15 @@
 <div class="col-md-10 col-sm-10">
 	<h1>Bienvenido a su Administrador de iBeacons</h1>
+	<p>Usuarios de prueba:</p>
+	<p>mail: example@mail.com o example2@mail.com</p>
+	<p>contraseña para ambos mails: password</p>
+	<h3>Instrucciones de uso:</h3>
+	<ul>
+		<li>Ingresar al sistema</li>
+		<li>Crear las regiones major y minor del beacon que se quiera guardar información</li>
+		<li>Crear el beacon en cuestión con el major y minor que se quiera y la descripción deseada</li>
+		<li>Abrir la aplicación móvil y ver la información que se cargo del beacon al acercarse a el</li>
+		<li>Ver reportes de descubrimientos de ese beacon</li>
+		<li>Ver reportes de dispositivos que utilizan la aplicación</li>
+	</ul>
 </div>
