--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -21,11 +21,11 @@
     </div>
     <div class="col-md-7">
       <br></br>
-      <%= f.label :major_id %>
-      <%= f.collection_select :major_region_id, MajorRegion.all, :major_id, :major_id%>
+      <%= f.label :major_region_id %>
+      <%= f.collection_select :major_region_id, MajorRegion.all, :major_region_id, :major_region_id%>
 
-      <%= f.label :minor_id %>
-      <%= f.collection_select :minor_region_id, MinorRegion.all, :minor_id, :minor_id%>
+      <%= f.label :minor_region_id %>
+      <%= f.collection_select :minor_region_id, MinorRegion.all, :minor_region_id, :minor_region_id%>
     </div>
     <div class="col-md-12">
       <%= f.label :Descripcion %>
